--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -141,10 +141,12 @@ d<!DOCTYPE html>
                       <div class="col-sm-12 ">
                         <div class="statistics-details align-items-center ">
                           <div class="row">
-                            <div class="col-md-4 col-lg-4 row-eq-height ">
+
+                            <div class="col-md-3 col-lg-3 row-eq-height ">
                               <div class="card  w-100 ">
                                 <div class="card-body pb-0">
-                                  <h4 class="card-title card-title-dash ">Plazas Activas</h4>
+                                  <img src="images/folder/folder_azul.png" width="40%">
+                                  <h4 class="card-title card-title-dash ">Manuales</h4>
                                   <div class="row">
                                     <div class="col-sm-4">
                                       <h2 class="" id="plazas_activas_conteo">0</h2>
@@ -160,10 +162,11 @@ d<!DOCTYPE html>
                             </div>
 
                             <!--<div class="col-md-4 col-lg-4 grid-margin row-eq-height stretch-card m-1">-->
-                            <div class="col-md-4 col-lg-4 row-eq-height " >
+                            <div class="col-md-3 col-lg-3 row-eq-height " >
                               <div class="card  w-100 ">
                                 <div class="card-body pb-0">
-                                  <h4 class="card-title card-title-dash ">Total de Aplicantes</h4>
+                                  <img src="images/folder/folder_celeste.png" width="40%">
+                                  <h4 class="card-title card-title-dash ">Institucional</h4>
                                   <div class="row">
                                     <div class="col-sm-4">
                                       <h2 class="" id="total_aplicantes_conteo">0</h2>
@@ -178,10 +181,11 @@ d<!DOCTYPE html>
                               </div>
                             </div>
 
-                            <div class="col-md-4 col-lg-4 row-eq-height " >
+                            <div class="col-md-3 col-lg-3 row-eq-height " >
                               <div class="card  w-100  ">
                                 <div class="card-body pb-0 ">
-                                  <h4 class="card-title card-title-dash ">Tiempo medio de contratación</h4>
+                                  <img src="images/folder/folder_gris.png" width="40%">
+                                  <h4 class="card-title card-title-dash ">Facturas</h4>
                                   <div class="row ">
                                     <div class="col-sm ">
                                       <h2 class="" id="tiempo_contratacion">0</h2>
@@ -190,6 +194,26 @@ d<!DOCTYPE html>
                                 </div>
                               </div>
                             </div>
+
+                            <div class="col-md-3 col-lg-3 row-eq-height ">
+                              <div class="card  w-100 ">
+                                <div class="card-body pb-0">
+                                  <img src="images/folder/folder_verde.png" width="40%">
+                                  <h4 class="card-title card-title-dash ">MARN</h4>
+                                  <div class="row">
+                                    <div class="col-sm-4">
+                                      <h2 class="" id="plazas_activas_conteo">0</h2>
+                                    </div>
+                                    <div class="col-sm-8">
+                                      <div class="status-summary-chart-wrapper pb-4">
+                                        <canvas id="plazas-activas"></canvas>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
                            </div>
                         </div>
                       </div>
