--- a/htmls/index.html
+++ b/htmls/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="vendors/typicons/typicons.css">
   <link rel="stylesheet" href="vendors/simple-line-icons/css/simple-line-icons.css">
   <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
+  <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
 
   <!-- endinject -->
   <!-- Plugin css for this page -->
