--- a/htmls/biblioteca.html
+++ b/htmls/biblioteca.html
@@ -179,13 +179,13 @@
 
                   </div>
 
-/*<<<<<<< Benito
+<!--/*<<<<<<< Benito
 
             </div>
 
              <div id="avanzado" style="display: none;" class="row">
 
-=======*/
+=======*/ -->
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-8 card card-rounded">
@@ -313,7 +313,7 @@
               </div>
             </div>
 
-/*
+<!-- inicio aca -->
             <div class="row">
               <span class="text-black fw-bold">
                 <br>
@@ -420,7 +420,7 @@
                 
             </div>
 
-*/
+<!-- termino aca -->
           </div>
         </div>
         <!-- content-wrapper ends -->
