--- a/htmls/categorias.html
+++ b/htmls/categorias.html
@@ -122,8 +122,13 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                       </div>
                                       <div class="modal-body">
+                                        <input type="radio" class="btn-check" name="options" id="btncategoria" autocomplete="off" checked>
+                                        <label class="btn btn-outline-info" for="option1">Categoria</label>
+
+                                        <input type="radio" class="btn-check" name="options" id="btnsubcategoria" autocomplete="off">
+                                        <label class="btn btn-outline-info" for="option2">Sub-Categoria</label>
                                         <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Nombre de la categoria"/>
+                                        <input type="text" class="form-control"/>
                                         </div>
                                         <!--<div class="form-group">
                                         <button type="submit" class="form-control btn btn-outline-info"><i class="ti ti-plus"></i> Agregar SubCategoria</button>
