--- a/htmls/biblioteca.html
+++ b/htmls/biblioteca.html
@@ -472,6 +472,7 @@
   <script >
     /*security(5);*/
     load_dashboard();
+    avanzado_display();
   </script>
 
   <!-- End custom js for this page-->
