--- a/htmls/notificacion.html
+++ b/htmls/notificacion.html
@@ -51,7 +51,7 @@
         <ul class="navbar-nav">
           <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
             
-            <h1 class="welcome-text"><span class="text-black fw-bold">Avisos</span> </h1>
+            <h1 class="welcome-text"><span class="text-black fw-bold">Notificación</span> </h1>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
