--- a/htmls/notificacion.html
+++ b/htmls/notificacion.html
@@ -55,12 +55,7 @@
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <form class="search-form" action="#">
-              <i class="icon-search"></i>
-              <input type="search" class="form-control" placeholder="Search Here" title="Search here">
-            </form>
-          </li>
+          
           <li class="nav-item dropdown d-none d-lg-block user-dropdown">
             <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
               <img class="img-xs rounded-circle" src="images/faces/face8.jpg" alt="Profile image"> </a>
@@ -111,7 +106,7 @@
                                 </div>
                                 <div class="row">
                                   <div class="col-sm-12 d-flex justify-content-end">
-                                    <button class="btn btn-primary" id="nuevo-puesto" style="color: white;"><b>Enviar</b></button>
+                                    <button class="btn btn-primary" style="color: white;"><b>Enviar</b></button>
                                   </div>
                                 </div>
                                 
