Registro para ciudadanos
- cambios en la seguridad
- registro ciudadano

--- a/htmls/biblioteca.html
+++ b/htmls/biblioteca.html
@@ -399,10 +399,10 @@
             </div>
 
             <div  id="avanzado1" style="display: none;" class="row" style="background-color: #ffffff !important;">
-              <div class="col-sm">
+              <!--<div class="col-sm">
                 <i style="width: 100%; height: 100%; color: green;" class="mdi mdi-plus-circle-outline menu-icon"></i>
                 <i style="width: 100%; height: 100%; color: red;" class="mdi mdi-minus-circle-outline menu-icon"></i>
-              </div>
+              </div>-->
               <div class="col-sm"></div>
               <div class="col-sm"></div>
               <div class="col-sm"></div>
