--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -172,7 +172,7 @@
                             
                             </div>
                             <div class="col-md-2 col-lg-2 ">
-                            <h4 ><b><span>Ver todo<i class="menu-icon mdi mdi-chevron-right "></i></span></b></h4>
+                            <h4 ><a href="biblioteca.html"><b><span>Ver todo<i class="menu-icon mdi mdi-chevron-right "></i></span></b></a></h4>
                             </div>
 
                           </div>
