--- a/htmls/registro.html
+++ b/htmls/registro.html
@@ -61,9 +61,9 @@
                 <div class="form-group">
                   <div class="input-group ">
                     <select class="form-control" id="ciudadano_sexo">
-                      <option value="0">Sexo...</option>
-                      <option value="1">Mujer</option>
-                      <option value="2">Hombre</option>
+                      <option value="">Sexo...</option>
+                      <option value="mujer">Mujer</option>
+                      <option value="hombre">Hombre</option>
                     </select>
                   </div>
                 </div>
@@ -75,18 +75,23 @@
                 <div class="form-group">
                   <div class="input-group ">
                     <select class="form-control" id="ciudadano_academico">
-                      <option value="0">Nivel académico...</option>
-                      <option value="1">Primaria</option>
-                      <option value="2">Básicos</option>
-                      <option value="2">Diversificado</option>
-                      <option value="2">Universidad</option>
-                      <option value="2">Postgrado</option>
+                      <option value="">Nivel académico...</option>
+                      <option value="Primaria">Primaria</option>
+                      <option value="Básicos">Básicos</option>
+                      <option value="Diversificado">Diversificado</option>
+                      <option value="Universidad">Universidad</option>
+                      <option value="Postgrado">Postgrado</option>
                     </select>
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="input-group mb-3">
                     <input type="text" class="form-control form-control-lg" id="ciudadano_telefono" placeholder="Telefono">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="input-group mb-3">
+                    <input type="password" class="form-control form-control-lg" id="ciudadano_contra" placeholder="Contraseña">
                   </div>
                 </div>
                 <div class="row">
