--- a/htmls/index.html
+++ b/htmls/index.html
@@ -33,7 +33,7 @@
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
               <div class="logo">
-                <center><img src="images/auth/login.png" alt="logo"></center>
+                <center><img src="images/auth/logo_marn_horizontal-1.jpg" class="img-fluid" alt="logo"></center>
                 
               </div>
                 
