--- a/htmls/biblioteca.html
+++ b/htmls/biblioteca.html
@@ -571,7 +571,7 @@
   <script src="js/Chart.roundedBarCharts.js"></script>
   
   <script >
-    /*security(5);*/
+    security(2,'DOCUMENTOS');
     load_dashboard();
     avanzado_display();
     display_categoria();
