--- a/htmls/notificacion.html
+++ b/htmls/notificacion.html
@@ -157,7 +157,7 @@
   <!-- End custom js for this page-->
   <script src="../assets/js/core.js"></script>
   <script >
-    security(4);
+    security(4,'NOTIFICACIONES');
     load_catalogo();
   </script>
 </body>
