--- a/htmls/categorias.html
+++ b/htmls/categorias.html
@@ -212,7 +212,7 @@
   <!-- Custom js for this page-->
   <script src="./js/chart.js"></script>
   <script >
-    security(4);
+    security(4,'CATEGORIAS');
     load_filtros();
   </script>
 </body>
