--- a/htmls/reportes.html
+++ b/htmls/reportes.html
@@ -353,7 +353,7 @@
   <script src="./js/bootstrap-datepicker.min.js"></script>
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script >
-    security(3);
+    security(3,'REPORTES');
     load_filtros();
   </script>
 </body>
