cambios en el dashboard (carpeta de categorias)

--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
   <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
   <link rel="stylesheet" href="vendors/dropzone/css/dropzone.css">
-  <link rel="stylesheet" href="vendors/dropzone/css/style.css">
+  <link rel="stylesheet" href="./css/drop.css">
   <script src="vendors/mdb-ui-kit-master/css/mdb.min.css"></script>
   <script src="vendors/mdb-ui-kit-master/css/mdb.dark.rtl.min.css"></script>
   <script src="vendors/mdb-ui-kit-master/css/mdb.dark.min.css"></script>
@@ -33,20 +33,7 @@
   <!-- endinject -->
   <!--<link rel="shortcut icon" href="images/favicon.png" />-->
 
-  <style type="text/css">
-    .file-upload-wrapper .card.card-body input {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    cursor: pointer;
-    z-index: 5;
-    }
-  </style>
+  
 </head>
 <body>
   <div class="container-scroller">
@@ -384,9 +371,9 @@
     <!-- page-body-wrapper ends -->
   </div>
   <!-- container-scroller -->
-
+  <script src="js/jquery-3.6.1.min.js"></script>
   <!-- plugins:js -->
-  <script src="vendors/js/vendor.bundle.base.js"></script>
+  <script src="./vendors/js/vendor.bundle.base.js"></script>
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <script src="vendors/chart.js/Chart.min.js"></script>
@@ -419,7 +406,8 @@
   <script src="vendors/dropzone/js/jquery-ui.min.js"></script>
   
   <!-- Custom js for this page-->
-  <script src="./js/chart.js"></script>
+  <script src="./js/graficas_dash.js"></script>
+  <script src="./js/upload.js"></script>
   <!-- End custom js for this page-->
 <script src="../../vendors/js/vendor.bundle.base.js"></script>
   <!-- endinject -->
@@ -432,75 +420,6 @@
 
   <!-- End custom js for this page-->
 
-
-  <script type="text/javascript">
-    $('.file-upload').file_upload();
-
-  </script>
-  <script>
-// Get the template HTML and remove it from the doument
-var previewNode = document.querySelector("#template");
-previewNode.id = "";
-var previewTemplate = previewNode.parentNode.innerHTML;
-previewNode.parentNode.removeChild(previewNode);
-
-var myDropzone = new Dropzone(document.body, {
-    url: "vendors/dropzone/upload.php",
-    paramName: "file",
-    acceptedFiles: 'application/*',
-    maxFilesize: 10,
-    maxFiles: 3,
-    thumbnailWidth: 160,
-    thumbnailHeight: 160,
-    thumbnailMethod: 'contain',
-    previewTemplate: previewTemplate,
-    autoQueue: true,
-    previewsContainer: "#previews",
-    clickable: ".fileinput-button"
-});
-
-myDropzone.on("addedfile", function(file) {
-    $('.dropzone-here').hide();
-    // Hookup the start button
-    file.previewElement.querySelector(".start").onclick = function() { myDropzone.enqueueFile(file); };
-});
-
-// Update the total progress bar
-myDropzone.on("totaluploadprogress", function(progress) {
-    document.querySelector("#total-progress .progress-bar").style.width = progress + "%";
-});
-
-myDropzone.on("sending", function(file) {
-    // Show the total progress bar when upload starts
-    document.querySelector("#total-progress").style.opacity = "1";
-    // And disable the start button
-    file.previewElement.querySelector(".start").setAttribute("disabled", "disabled");
-});
-
-// Hide the total progress bar when nothing's uploading anymore
-myDropzone.on("queuecomplete", function(progress) {
-    //document.querySelector("#total-progress").style.opacity = "0";
-});
-
-// Setup the buttons for all transfers
-// The "add files" button doesn't need to be setup because the config
-// `clickable` has already been specified.
-document.querySelector("#actions .start").onclick = function() {
-    myDropzone.enqueueFiles(myDropzone.getFilesWithStatus(Dropzone.ADDED));
-};
-
-$('#previews').sortable({
-    items:'.file-row',
-    cursor: 'move',
-    opacity: 0.5,
-    containment: "parent",
-    distance: 20,
-    tolerance: 'pointer',
-    update: function(e, ui){
-        //actions when sorting
-    }
-});
-</script>
 
 </body>
 
