--- a/htmls/ficha_usuarios.html
+++ b/htmls/ficha_usuarios.html
@@ -237,7 +237,7 @@
   <script src="../assets/js/core.js"></script>
   <script >
 
-    security(11);
+    security(4,'FICHA USUARIOS');
     load_ficha_usuario();
   </script>
 </body>
