--- a/htmls/ficha_usuarios.html
+++ b/htmls/ficha_usuarios.html
@@ -150,8 +150,8 @@
                                   <input type="file" class="form-control" id="ficha_usuario_foto" name="ficha_usuario_foto[]" multiple>
                                 </div>
                                 <div class="col-sm">
-                                  <label>Región</label>
-                                  <input type="text" class="form-control" id="region">
+                                  <label>Identificación</label>
+                                  <input type="text" class="form-control" id="identification">
                                 </div>
                               </div>
                               <div class="row mt-3">
@@ -159,8 +159,7 @@
                                   <label>Rol</label>
                                   <select class="form-control" id="lista_roles">
                                     <option>...</option>
-                                    <option>Administración</option>
-                                    <option>Operaciones</option>
+                                    
                                   </select>
                                 </div>
                                 <div class="col-sm" id="div_lista_empresas" style="display:none;">
@@ -169,6 +168,14 @@
                                     <option>Patsy</option>
                                     <option>Empresa1</option>
                                     <option>Empresa2</option>
+                                  </select>
+                                </div>
+                                <div class="col-sm">
+                                  <label>Sexo</label>
+                                  <select class="form-control" id="lista_sexo">
+                                    <option>...</option>
+                                    <option value="mujer">Mujer</option>
+                                    <option value="hombre">Hombre</option>
                                   </select>
                                 </div>
                                 <div class="col-sm">
@@ -181,6 +188,27 @@
                                 <div class="col-sm">
                                   <label>Contraseña :</label>
                                   <input type="text" class="form-control" id="pass">
+                                </div>
+                              </div>
+                              <div class="row mt-3">
+                                <div class="col-sm">
+                                  <label>Nivel académico</label>
+                                  <select class="form-control" id="lista_nivel_academico">
+                                    <option>...</option>
+                                    <option value="Primaria">Primaria</option>
+                                    <option value="Básicos">Básicos</option>
+                                    <option value="Diversificado">Diversificado</option>
+                                    <option value="Universidad">Universidad</option>
+                                    <option value="Postgrado">Postgrado</option>
+                                  </select>
+                                </div>
+                                <div class="col-sm">
+                                  <label>Teléfono</label>
+                                  <input type="text" class="form-control" id="phone">
+                                </div>
+                                <div class="col-sm">
+                                  <label>Dependencia</label>
+                                  <input type="text" class="form-control" id="dependencia">
                                 </div>
                               </div>
                               <div class="row mt-3">
