--- a/htmls/manto_usuarios.html
+++ b/htmls/manto_usuarios.html
@@ -114,8 +114,9 @@
                                       <tr>
                                         <th>NOMBRE</th>
                                         <th>EMAIL</th>
-                                        <th>REGION</th>
+                                        <th>IDENTIFICACIÓN</th>
                                         <th>ROL</th>
+                                        <th>GRADO ACADÉMICO</th>
                                         <th>ESTATUS</th>
                                       </tr>
                                     </thead>
