--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -373,7 +373,7 @@
   <!-- container-scroller -->
   <script src="js/jquery-3.6.1.min.js"></script>
   <!-- plugins:js -->
-  <script src="./vendors/js/vendor.bundle.base.js"></script>
+  <script src="vendors/js/vendor.bundle.base.js"></script>
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <script src="vendors/chart.js/Chart.min.js"></script>
@@ -406,10 +406,10 @@
   <script src="vendors/dropzone/js/jquery-ui.min.js"></script>
   
   <!-- Custom js for this page-->
-  <script src="./js/graficas_dash.js"></script>
-  <script src="./js/upload.js"></script>
+  <script src="js/graficas_dash.js"></script>
+  <script src="js/upload.js"></script>
   <!-- End custom js for this page-->
-<script src="../../vendors/js/vendor.bundle.base.js"></script>
+
   <!-- endinject -->
  
 
