update on git ignore and explorer.php

--- a/htmls/biblioteca.html
+++ b/htmls/biblioteca.html
@@ -542,7 +542,7 @@
   
   <script >
     security(2,'DOCUMENTOS');
-    load_dashboard();
+    //load_dashboard();
     avanzado_display();
     display_categoria();
     display_author();
