--- a/htmls/categorias.html
+++ b/htmls/categorias.html
@@ -213,6 +213,7 @@
   <script src="./js/chart.js"></script>
   <script >
     security(4,'CATEGORIAS');
+    viewcarpeta();
     load_filtros();
   </script>
 </body>
