--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -160,7 +160,7 @@
                             </div>
                             <div class="col-2 ">
                               <div class="align-items-end">
-                                <h4 ><a href="biblioteca.html"><b><span>Ver todo<i class="menu-icon mdi mdi-chevron-right "></i></span></b></a></h4>
+                                <a class="nav-link" href="explorador.html" style="padding:0;text-align:right;"><h5><b><span>Ver todo<i class="menu-icon mdi mdi-chevron-right "></i></span></b></h5></a>
                               </div>
                             
                             </div>
