--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -257,9 +257,9 @@
   <script >
 
     security(1,'DASHBOARD');
-    //load_dashboard();
+    load_dashboard();
     notify_info();
-    category_graphic();
+    //category_graphic();
 
   </script>
 
