--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -161,7 +161,7 @@
        </div>
      </div>
    </div>
-   <!-- INICIO GRAFICA FUNCIONAL -->
+   <!-- INICIO GRAFICA FUNCIONAL 
    <div class="row">
      <div class="col-sm-12">
         <div class="col-lg-12 grid-margin grid-margin-lg-0 stretch-card">
@@ -174,7 +174,7 @@
         </div>
      </div>
    </div>
-   <!-- FIN GRAFICA FUNCIONAL -->
+    FIN GRAFICA FUNCIONAL -->
    <!-- Modal -->
 <div class="modal fade" id="upload" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
