--- a/htmls/reportes_filtros.html
+++ b/htmls/reportes_filtros.html
@@ -184,7 +184,7 @@
   <!-- End custom js for this page-->
   <script src="../assets/js/core.js"></script>
   <script >
-    security(17);
+    //security(17);
     load_filtros();
   </script>
 </body>
