cierre por inactividad

--- a/htmls/categorias.html
+++ b/htmls/categorias.html
@@ -211,6 +211,7 @@
   <script src="../assets/js/core.js"></script>
   <!-- Custom js for this page-->
   <script src="./js/chart.js"></script>
+  <script src="js/autologout.js"></script>
   <script >
     security(4,'CATEGORIAS');
     viewcarpeta();
