--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -248,6 +248,7 @@
   
   <!-- Custom js for this page-->
   <script src="js/dash.js"></script>
+  <script src="js/autologout.js"></script>
 
   <!-- End custom js for this page-->
 
