--- a/htmls/manto_usuarios.html
+++ b/htmls/manto_usuarios.html
@@ -172,6 +172,7 @@
   <script src="js/Chart.roundedBarCharts.js"></script>
   <!-- End custom js for this page-->
   <script src="../assets/js/core.js"></script>
+  <script src="js/autologout.js"></script>
   <script >
     security(4,'USUARIOS');
     load_users();
