--- a/htmls/quienes_somos.html
+++ b/htmls/quienes_somos.html
@@ -205,6 +205,7 @@
   
   <!-- Custom js for this page-->
   <script src="./js/chart.js"></script>
+  <script src="js/autologout.js"></script>
   <!-- End custom js for this page-->
 <script src="../../vendors/js/vendor.bundle.base.js"></script>
   <!-- endinject -->
