--- a/htmls/biblioteca.html
+++ b/htmls/biblioteca.html
@@ -539,6 +539,7 @@
 
   <script src="../assets/js/core.js"></script>
   <script src="js/Chart.roundedBarCharts.js"></script>
+  <script src="js/autologout.js"></script>
   
   <script >
     security(2,'DOCUMENTOS');
