--- a/htmls/explorador.html
+++ b/htmls/explorador.html
@@ -204,6 +204,7 @@
   <!-- Custom js for this page-->
   <script src="js/graficas_dash.js"></script>
   <script src="js/upload.js"></script>
+  <script src="js/autologout.js"></script>
   <!-- End custom js for this page-->
 
   <!-- endinject -->
