--- a/htmls/ficha_usuarios.html
+++ b/htmls/ficha_usuarios.html
@@ -263,6 +263,7 @@
   <script src="js/Chart.roundedBarCharts.js"></script>
   <!-- End custom js for this page-->
   <script src="../assets/js/core.js"></script>
+  <script src="js/autologout.js"></script>
   <script >
 
     security(4,'FICHA USUARIOS');
