--- a/htmls/notificacion.html
+++ b/htmls/notificacion.html
@@ -164,6 +164,7 @@
   <script src="js/Chart.roundedBarCharts.js"></script>
   <!-- End custom js for this page-->
   <script src="../assets/js/core.js"></script>
+  <script src="js/autologout.js"></script>
   <script >
     security(4,'NOTIFICACIONES');
     load_catalogo();
