--- a/htmls/reportes.html
+++ b/htmls/reportes.html
@@ -304,6 +304,7 @@
   <script src="js/moment.js"></script>
   <script src="js/daterangepicker.js"></script>
   <script src="js/select2.js"></script>
+  <script src="js/autologout.js"></script>
   <script >
     $('#date_range').daterangepicker();
     security(3,'REPORTES');
