--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -32,7 +32,11 @@
   <link rel="stylesheet" href="css/vertical-layout-light/style.css">
   <!-- endinject -->
   <!--<link rel="shortcut icon" href="images/favicon.png" />-->
-  
+  <style type="text/css">
+    #GraphDash{
+      max-width: 500px;
+    }
+  </style>
   
 </head>
 <body >
