full update user photos and explorer

--- a/htmls/explorador.html
+++ b/htmls/explorador.html
@@ -64,7 +64,7 @@
           <li class="nav-item">
             <form class="search-form" action="#">
               <i class="icon-search"></i>
-              <input type="search" class="form-control" placeholder="Search Here" title="Search here">
+              <input type="search" id="explorer_search" class="form-control" placeholder="Buscar" title="Buscar">
             </form>
           </li>
           <li class="nav-item dropdown d-none d-lg-block user-dropdown">
