--- a/htmls/ficha_usuarios_modificar.html
+++ b/htmls/ficha_usuarios_modificar.html
@@ -108,6 +108,10 @@
                                   <label>Correo</label>
                                   <input type="text" class="form-control" id="correo">
                                 </div>
+                                <div class="col-sm">
+                                  <label>Contraseña :</label>
+                                  <input type="text" class="form-control" id="pass">
+                                </div>
                               </div>
                               <div class="row mt-3">
                                 <div class="col-sm">
