--- a/htmls/registro.html
+++ b/htmls/registro.html
@@ -68,8 +68,10 @@
                   </div>
                 </div>
                 <div class="form-group">
+                  <label>Fecha de nacimiento:</label><br>
                   <div class="input-group">
-                    <input placeholder="Fecha de nacimiento" type="date" id="ciudadano_nacimiento" class="form-control datepicker">
+
+                    <input placeholder="Fecha de nacimiento" type="date" id="ciudadano_nacimiento"  class="form-control datepicker">
                   </div>
                 </div>
                 <div class="form-group">
