--- a/htmls/biblioteca.html
+++ b/htmls/biblioteca.html
@@ -345,13 +345,13 @@
                   </div>
 
 
-                  <div class="col-sm">
+                  <!--<div class="col-sm">
                     <h5 class="welcome-text"><span class="text-black fw-bold">Fecha de publicación</span> </h5>
-                    <input type="text" class="js-example-basic-multiple w-100" id="dtRange" name="datetimes" /><!--
+                    <input type="text" class="js-example-basic-multiple w-100" id="dtRange" name="datetimes" />--><!--
                     <select class="js-example-basic-multiple w-100"s placeholder="Tipo de documento" id="select_palabra_clave" name="">
                                 <option selected value="AL">01/2021 - 07/2022</option>
                       </select>-->
-                  </div>
+                  <!--</div>-->
                   <div class="col-sm">
                     <h5 class="welcome-text"><span class="text-black fw-bold">Autor</span> </h5>
                     <select class="js-example-basic-multiple w-100"s placeholder="Autor" id="select_author" name="">
