--- a/htmls/biblioteca.html
+++ b/htmls/biblioteca.html
@@ -480,7 +480,7 @@
                             <div class="row " >
                               <div class="col-lg-12">
                                 
-                                <ul class="list-group list-group-flush nav">
+                                <ul class="list-group list-group-flush nav">;-->
 
                                     <!--<i class="mdi mdi-file-document-box mdi-36px"></i>-->
                                 <!--    
