--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -80,8 +80,8 @@
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
               <div class="dropdown-header text-center">
                 <img class="img-md rounded-circle" src="images/faces/face8.jpg" alt="Profile image">
-                <p class="mb-1 mt-3 font-weight-semibold headerbar_user_name">Juan Perez</p>
-                <p class="fw-light text-muted mb-0  headerbar_email">juanperez@gmail.com</p>
+                <p class="mb-1 mt-3 font-weight-semibold headerbar_user_name">Nombre</p>
+                <p class="fw-light text-muted mb-0  headerbar_email">email@gmail.com</p>
               </div>
               <!--
               <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-account-outline text-primary me-2"></i> My Perfil <span class="badge badge-pill badge-danger">1</span></a>-->
